# just-akash

./: .gitignore  .secrets.baseline  .semgrepignore  .sops.yaml  ASSESSMENT.md  CHANGELOG.md  Justfile  README.md  SECURITY.md  deploy-credit.json  pyproject.toml  smoke-benchmark.jsonl  smoke-latency.jsonl  smoke-metrics.prom
.github/: dependabot.yml
.github/actions/sops-env/: action.yml
.github/scripts/: accrue-telemetry.sh  check_repo_invariants.py
.github/workflows/: ci.yml  cleanup-stale.yml  provider-smoke.yml  secrets.yml  security.yml  z9nr-bid-test.yml
.planning/memory/: errors.jsonl
.planning/phases/07-lease-shell-exec/: 07-01-PLAN.md  07-01-SUMMARY.md  07-RESEARCH.md
.planning/phases/08-secrets-injection-via-lease-shell/: 08-RESEARCH.md
.planning/quorum/: failures.json  scoreboard.json
.planning/quorum/debates/: 2026-07-04-claude-1-akash-console-api-for-the-same-deployment-dseq-the.md  2026-07-04-copilot-1-akash-console-api-for-the-same-deployment-dseq-the.md  2026-07-04-opencode-1-akash-console-api-for-the-same-deployment-dseq-the.md
.planning/quorum/rounds/: quorum-rounds-session-1783173593850.jsonl  quorum-rounds-session-1783173626089.jsonl  quorum-rounds-session-1783173703798.jsonl  quorum-rounds-session-1783173731128.jsonl  quorum-rounds-session-1783173762788.jsonl
.planning/repowise/: cochange-cache.json
.planning/telemetry/: token-usage.jsonl
docs/: ARCHITECTURE.md  DEVELOPING.md  MODULE_REFERENCE.md  TESTING.md  TROUBLESHOOTING.md  diagnostics.md  exec-reliability-investigation.md
just_akash/: _diagnostics.py  _e2e.py  _states.py  analyze_telemetry.py  api.py  benchmark.py  chain.py  cleanup_stale.py  cli.py  deploy.py  prometheus_exporter.py  smoke_providers.py  test_secrets_e2e.py  test_shell_e2e.py
just_akash/transport/: base.py  lease_shell.py  ssh.py
sdl/: akash-node.yaml
secrets/: ci.sops.env
tests/: _creds.py  _fake_akash.py  test_adversarial.py  test_analyze_telemetry.py  test_api.py  test_api_extensions.py  test_balance_check.py  test_benchmark.py  test_chain.py  test_cleanup_stale.py  test_cli.py  test_cli_dispatch.py  test_cli_extensions.py  test_default_transport.py  test_diagnostics.py  test_e2e_cleanup.py  test_escrow_locked.py  test_exec_command_quoting.py  test_exec_service_selection.py  test_integration_fake.py  test_interactive_shell.py  test_lease_remaining.py  test_lease_shell_exec.py  test_lease_stream.py  test_no_bid_evidence.py  test_prometheus_exporter.py  test_repo_invariants.py  test_smoke_providers.py  test_stale_bid_selection.py  test_transport.py  test_transport_cli_integration.py  test_transport_inject.py  test_update_flow.py
