[project]
name = "just-akash"
version = "1.9.0"
description = "Justfile recipes + Python CLI for deploying on Akash Network via the Console API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Jonathan Borduas" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "websockets>=16.0",
    "pexpect>=4.9.0",
    "pyyaml>=6.0",
]

[project.scripts]
just-akash = "just_akash.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
# Modules that shell out to `ssh` by design: they build argv lists (never
# shell=True — S602 stays enabled everywhere to enforce that) and resolve `ssh`
# from PATH for portability. Scope S603/S606/S607 to just these files so a new
# unsafe subprocess/exec elsewhere still fails CI.
"just_akash/api.py" = ["S603", "S606", "S607"]
"just_akash/cli.py" = ["S603", "S606", "S607"]
"just_akash/transport/ssh.py" = ["S603", "S606", "S607"]
# Test and e2e code: assert-based tests (S101), hardcoded test creds (S105) and
# /tmp paths (S108), and shell-based test orchestration (S602) are expected and
# are not part of the shipped attack surface.
"tests/**" = ["S"]
"just_akash/test_*.py" = ["S"]
"just_akash/_e2e.py" = ["S"]
"just_akash/smoke_providers.py" = ["S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=just_akash --cov-report=term-missing"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pyright>=1.1.399",
    "ruff>=0.15.10",
    "types-pexpect>=4.9.0.20260127",
    "types-pyyaml>=6.0",
]
