[project]
name = "just-akash"
version = "1.34.0"
description = "Justfile recipes + Python CLI for deploying on Akash Network via the Console API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Jonathan Borduas" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "websockets>=16.0",
    "pexpect>=4.9.0",
    "pyyaml>=6.0",
    # Shared sans-I/O core for the lease-shell wire protocol — the same package
    # the DigitalFrontier control plane consumes, so the frame codec, proxy
    # envelope and exec result semantics have exactly ONE implementation.
    # Pinned to a release wheel (not a branch) so the protocol cannot shift
    # under an installed CLI.
    "akash-lease-core @ https://github.com/Digital-Frontier-LDA/akash-lease-core/releases/download/v0.2.0/akash_lease_core-0.2.0-py3-none-any.whl#sha256=eda7e7a51284c61941ca64b3c4d429791a5c9248a8b118d3da50b36ffcd2fec0",
]

[project.scripts]
just-akash = "just_akash.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
# Modules that shell out to `ssh` by design: they build argv lists (never
# shell=True — S602 stays enabled everywhere to enforce that) and resolve `ssh`
# from PATH for portability. Scope S603/S606/S607 to just these files so a new
# unsafe subprocess/exec elsewhere still fails CI.
"just_akash/api.py" = ["S603", "S606", "S607"]
"just_akash/cli.py" = ["S603", "S606", "S607"]
"just_akash/transport/ssh.py" = ["S603", "S606", "S607"]
# Test and e2e code: assert-based tests (S101), hardcoded test creds (S105) and
# /tmp paths (S108), and shell-based test orchestration (S602) are expected and
# are not part of the shipped attack surface.
"tests/**" = ["S"]
"just_akash/test_*.py" = ["S"]
"just_akash/_e2e.py" = ["S"]
"just_akash/smoke_providers.py" = ["S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=just_akash --cov-report=term-missing"

# The three live e2e modules are invoked as scripts (`just test`, `just
# test-secrets`, `just test-shell` / the CI e2e jobs), never collected by pytest,
# so they cannot contribute coverage. Omitting them stops ~540 un-runnable
# statements from depressing the reported total — the percentage then reflects
# only the unit-tested surface. Their behavior IS covered: the shared helpers in
# _e2e.py are unit-tested by tests/test_e2e_cleanup.py (100%), and the scripts
# run live in CI.
[tool.coverage.run]
omit = [
  "just_akash/test_lifecycle.py",
  "just_akash/test_secrets_e2e.py",
  "just_akash/test_shell_e2e.py",
]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.hatch.metadata]
# akash-lease-core is pinned to a release wheel URL (PEP 508 direct reference).
# Hatchling rejects direct references in project.dependencies unless this is set
# — the package is not on PyPI, and pinning a URL is deliberate so the wire
# protocol cannot shift under an installed CLI.
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pyright>=1.1.399",
    "ruff>=0.15.10",
    "types-pexpect>=4.9.0.20260127",
    "types-pyyaml>=6.0",
]
